# Spoon

./: .gitignore  CONTRIBUTING.md  README.md  Spoon.xctestplan  skills-lock.json
.agents/skills/compose-app-icon/: SKILL.md
.agents/skills/compose-app-icon/scripts/: create_icon.py  icon-schema.json  pyproject.toml  validate_icon.py
.agents/skills/compose-app-icon/scripts/tests/: test_create_icon.py  test_validate_icon.py
.agents/skills/ios-design-guidelines/: AGENTS.md  SKILL.md
.agents/skills/ios-design-guidelines/rules/: _sections.md
.agents/skills/ipados-design-guidelines/: AGENTS.md
.agents/skills/ipados-design-guidelines/rules/: _sections.md
.github/workflows/: ci.yml  release.yml
AppIcon.icon/: icon.json
Spoon/: Info.plist  SpoonApp.swift  SpoonIntents.swift
Spoon.xcodeproj/: project.pbxproj
Spoon.xcodeproj/xcshareddata/xcschemes/: Spoon.xcscheme
Spoon/AppIcon.icon/: icon.json
SpoonKit/: Package.resolved  Package.swift
SpoonKit/Sources/SpoonCore/AI/: AIModels.swift  ClaudeCodeProvider.swift  CodexProvider.swift  CodingAgentProvider.swift  PromptBuilder.swift
SpoonKit/Sources/SpoonCore/Git/: CloneOptions.swift  DiffPatchBuilder.swift  GitClient.swift  GitCommand.swift  (+13 more)
SpoonKit/Sources/SpoonIntent/: OpenRecentRepositoryIntent.swift  RecentRepositories.swift  SpoonIntentPackage.swift  StashChangesIntent.swift
SpoonKit/Tests/SpoonIntentTests/: LiveIntentTests.swift  OpenRecentRepositoryIntentTests.swift  StashChangesIntentTests.swift
SpoonKit/Tests/SpoonUITests/: SpoonUITests.swift
docs/: architecture.md  testing.md
(+136 files in other folders)
